# High-Performance-Log-Processing-Engine

./: .gitignore  CMakeLists.txt  README.md
include/core/: chunk.hpp  metrics.hpp  threadpool.hpp
include/log/: MemoryMapper.hpp  parser.hpp
src/: main.cpp
src/core/: chunk.cpp  metrics.cpp  threadpool.cpp
src/log/: MemoryMapper.cpp  parser.cpp
